--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@capacitor/status-bar": "6.0.1",
     "@ionic/angular": "^8.0.0",
     "cordova-sqlite-storage": "^6.1.0",
+    "cypress": "^13.16.1",
     "ionicons": "^7.0.0",
     "json-server": "^1.0.0-beta.3",
     "rxjs": "~7.8.0",
